@@ -8,6 +8,8 @@
   * Eliminates post-boot logging as this may have negative impacts
 - Removes `PanicFilter` Feature
   * The feature is not used by the target unsupported units in RefindPlus and creates issues on supported units
+- Limits CSR Operations to Apple Firmware
+  * Extends limitation of misc SIP/CSR items to Apple firmware pending review of applicability 
 
 
 0.13.2.AP (19 Apr 2022):
